--- a/index.html
+++ b/index.html
@@ -5,9 +5,24 @@
     <title>Hangman</title>
     <script type="text/javascript">
     </script>
-    
+    <!-- src="bundle.js" -->
+    <link href="application.css" type="text/css" rel="stylesheet" />
+
+
   </head>
   <body>
+    _ _ _ _ _ _ _
+
+    <div class="flip-container " ontouchstart="this.classList.toggle('hover');">
+    	<div class="flipper">
+    		<div class="front letters">
+    			_
+    		</div>
+    		<div class="back letters">
+    			H
+    		</div>
+    	</div>
+    </div>
 
   </body>
 </html>
