--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Hangman</title>
-    <script type="text/javascript">
+    <script type="text/javascript" src="hangman.js" >
+
     </script>
     <!-- src="bundle.js" -->
     <link href="application.css" type="text/css" rel="stylesheet" />
@@ -13,6 +14,12 @@
   <body>
     _ _ _ _ _ _ _
 
+    <div class="developer-display">dev display</div>
+    <div class="guess-display">guess display</div>
+
+    <div class="guess"></div>
+
+    <div></div>
     <div class="flip-container " ontouchstart="this.classList.toggle('hover');">
     	<div class="flipper">
     		<div class="front letters">
@@ -23,6 +30,10 @@
     		</div>
     	</div>
     </div>
+    <div>
+      <button type="button" name="button" class="full-screen-button" > Go Full Screen</button>
+    </div>
+
 
   </body>
 </html>
