Prepare to toggle flip only on letter selection

--- a/index.html
+++ b/index.html
@@ -24,13 +24,16 @@
       };
     </script>
 
+    <div>
+      <button type="button" name="button" class="full-screen-button" > Go Full Screen</button>
+    </div>
+
     <div class="developer-display">dev display</div>
     <div class="guess-display">guess display</div>
 
-    <div class="guess"></div>
+    <section class="guess"></section>
 
-    <div></div>
-    <div class="flip-container " ontouchstart="this.classList.toggle('hover');">
+    <!-- <div class="flip-container " ontouchstart="this.classList.toggle('hover');">
     	<div class="flipper">
     		<div class="front letters">
     			_ _ _ _ _ _ _
@@ -39,11 +42,7 @@
     			H A N G M A N
     		</div>
     	</div>
-    </div>
-    <div>
-      <button type="button" name="button" class="full-screen-button" > Go Full Screen</button>
-    </div>
-
+    </div> -->
 
   </body>
 </html>
