Prepare to render 40k array

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Hangman</title>
-    <script type="text/javascript" src="hangman.js" > </script>
+    <script type="text/javascript" src="app/assets/javascripts/bundle.js" > </script>
 
     <link href="application.css" type="text/css" rel="stylesheet" />
   </head>
