--- a/index.html
+++ b/index.html
@@ -3,48 +3,50 @@
   <head>
     <meta charset="utf-8">
     <title>Hangman</title>
-    <script type="text/javascript" src="app/assets/javascripts/bundle.js" > </script>
+    <script type="text/javascript" src="./bundle.js" > </script>
 
     <link href="application.css" type="text/css" rel="stylesheet" />
   </head>
   <body class="rainbow">
-    <!-- allow user dictionary   -->
-    <input hidden type='file' accept='text/plain' onchange='openFile(event)'><br>
-    <img id='output'>
-    <script>
-      var openFile = function(event) {
-        var input = event.target;
+    <div id="fullscreen">
+      <!-- allow user dictionary   -->
+      <input hidden type='file' accept='text/plain' onchange='openFile(event)'><br>
+      <img id='output'>
+      <script>
+        var openFile = function(event) {
+          var input = event.target;
 
-        var reader = new FileReader();
-        reader.onload = function(){
-          var text = reader.result;
-          console.log(reader.result.substring(0, 200));
+          var reader = new FileReader();
+          reader.onload = function(){
+            var text = reader.result;
+            console.log(reader.result.substring(0, 200));
+          };
+          reader.readAsText(input.files[0]);
         };
-        reader.readAsText(input.files[0]);
-      };
-    </script>
+      </script>
 
-    <div>
-      <button type="button" name="button" class="full-screen-button" > Go Full Screen</button>
+      <div>
+        <button type="button" name="button" class="full-screen-button" > Go Full Screen</button>
+      </div>
+
+      <div class="developer-display">dev display</div>
+      <div class="guess-display">guess display</div>
+      <main>
+        <section class="guess"></section>
+
+        <!-- <div class="flip-container " ontouchstart="this.classList.toggle('hover');">
+        	<div class="flipper">
+        		<div class="front letters">
+        			_ _ _ _ _ _ _
+        		</div>
+        		<div class="back letters">
+        			H A N G M A N
+        		</div>
+        	</div>
+        </div> -->
+        <section id="guess-array" class="guesses"> </section>
+        <section id="demo" class="demo"> </section>
+      </main>
     </div>
-
-    <div class="developer-display">dev display</div>
-    <div class="guess-display">guess display</div>
-    <main>
-      <section class="guess"></section>
-
-      <!-- <div class="flip-container " ontouchstart="this.classList.toggle('hover');">
-      	<div class="flipper">
-      		<div class="front letters">
-      			_ _ _ _ _ _ _
-      		</div>
-      		<div class="back letters">
-      			H A N G M A N
-      		</div>
-      	</div>
-      </div> -->
-      <section id="guess-array" class="guesses"> </section>
-      <section id="demo" class="demo"> </section>
-    </main>
   </body>
 </html>
