Add hidden input for mobile keyboard

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         <section hidden id="guess-array" class="guesses"> </section>
 
-
+        <section hidden id="mobile-prompt" class="mobile-prompt"><input hidden id="hidden-input" type="text" name="" value=""> </input> </section>
 
       </main>
     </div>
