Add reset button

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <section hidden id="guess-array" class="guesses"> </section>
 
         <section hidden id="mobile-prompt" class="mobile-prompt"><input hidden id="hidden-input" type="text" name="" value=""> </input> </section>
-
+        <section> <button type="button" name="reset-button" class="reset-button" id="reset-button" >Get New Word</button> </section>
       </main>
     </div>
   </body>
