Improve record display for last guess

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <main>
         <section class="guess"></section>
 
-        <section class="guess-display">guess display</section>
+        <section class="guess-display">You guessed: -</section>
         <section><div id="buttons"></div></section>
 
         <section hidden id="guess-array" class="guesses"> </section>
