--- a/index.html
+++ b/index.html
@@ -43,5 +43,10 @@
         <section> <button type="button" name="reset-button" class="reset-button" id="reset-button" >Get New Word</button> </section>
       </main>
     </div>
+    <footer>
+      <a href="http://github.com/corsonknowles" target="_blank">GitHub</a>
+      <a href="https://www.linkedin.com/in/davidcorsonknowles/" target="_blank">LinkedIn</a>
+      <a href="mail-to:developer@hangmangame.co">Developer Inquiries</a>
+    </footer>
   </body>
 </html>
