Fix end of game logic

--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
       </script>
       <h1>Hangman</h1>
       <section hidden id="demo" class="demo"> </section>
-      <div>
-        <button hidden type="button" name="button" class="full-screen-button" > Go Full Screen</button>
-      </div>
+
       <div hidden class="developer-display">dev display</div>
 
       <main>
@@ -41,12 +39,13 @@
 
         <section hidden id="mobile-prompt" class="mobile-prompt"><input hidden id="hidden-input" type="text" name="" value=""> </input> </section>
         <section> <button type="button" name="reset-button" class="reset-button" id="reset-button" >Get New Word</button> </section>
+        <section> <button hidden type="button" name="button" class="full-screen-button" >Go Full Screen</button> </section>
       </main>
     </div>
     <footer>
       <a href="http://github.com/corsonknowles" target="_blank">GitHub</a>
       <a href="https://www.linkedin.com/in/davidcorsonknowles/" target="_blank">LinkedIn</a>
-      <a href="mail-to:developer@hangmangame.co">Developer Inquiries</a>
+      <a href="mailto:developer@hangmangame.co?Subject=Developer%20Recruiter%20Inquiry%20from%20HangmanGame.co">Developer Inquiries</a>
     </footer>
   </body>
 </html>
