--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Hangman</title>
+    <title>Hangman: Play the Hangman Game with your keyboard or by tapping on the screen</title>
+    <meta name="description" content="This awesome Hangman game is built with CSS3 animations and vanilla JavaScript. It let's you type on your own keyboard to guess letters, or tap the onscreen keyboard to get the same result.">
     <script type="text/javascript" src="./bundle.js" > </script>
 
     <link href="application.css" type="text/css" rel="stylesheet" />
