Enhance mobile further with position relative tags and remove full screen button

--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
         <div class="flex-section">
           <section class="guess-display">You guessed: -</section>
           <section class="button-section"><div id="buttons"></div> </section>
-          <section> <button type="button" name="reset-button" class="reset-button" id="reset-button" >Get New Word</button> </section>
-          <section> <button hidden type="button" name="button" class="full-screen-button" >Go Full Screen</button> </section>
+          <section class="reset-section"> <button type="button" name="reset-button" class="reset-button" id="reset-button" >Get New Word</button> </section>
           <section class="score">0/26</section>
         </div>
       </main>
