Remove clearfix class

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
         <section class="guess"></section>
 
         <div class="flex-section">
-          <section class="guess-display clear">You guessed: -</section>
-          <section class="button-section clear"><div id="buttons"></div> </section>
-          <section class="reset-section clear"> <button type="button" name="reset-button" class="reset-button" id="reset-button" >Get New Word</button> </section>
-          <section class="score clear">0/26</section>
+          <section class="guess-display ">You guessed: -</section>
+          <section class="button-section "><div id="buttons"></div> </section>
+          <section class="reset-section "> <button type="button" name="reset-button" class="reset-button" id="reset-button" >Get New Word</button> </section>
+          <section class="score ">0/26</section>
         </div>
       </main>
 
