Amend HTML file to start with 0 misses also

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <section class="guess-display ">You guessed: -</section>
           <section class="button-section "><div id="buttons"></div> </section>
           <section class="reset-section "> <button type="button" name="reset-button" class="reset-button" id="reset-button" >Get New Word</button> </section>
-          <section class="score ">0/26</section>
+          <section class="score ">0/26 0 misses</section>
         </div>
       </main>
 
