Give user feedback when they repeat a letter and only display instructions on load

--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
   <body class="rainbow">
       <header>
       <h1><a href="http://hangmangame.co">Hangman</a></h1>
-      <section id="demo" class="demo"> </section>
+      <!-- <section id="demo" class="demo"> </section> -->
       </header>
 
       <main>
         <section class="guess"></section>
 
         <div class="flex-section">
-          <section class="guess-display ">You guessed: -</section>
+          <section class="guess-display ">Guess a letter: Tap or Type</section>
           <section class="button-section "><div id="buttons"></div> </section>
           <section class="reset-section "> <button type="button" name="reset-button" class="reset-button" id="reset-button" >Get New Word</button> </section>
           <section class="score ">0/26 0 misses</section>
